# XPA

./: CMakeLists.txt  README.md  license.txt
src/: AuxGenoData.cpp  AuxGenoData.h  CMakeLists.txt  CovarBasis.h  CovarBasis_impl.h  GeneticCorr.cpp  GeneticCorr.h  GenoData.cpp  GenoData.h  GenotypeBasis.cpp  GenotypeBasis.h  IOUtils.cpp  IOUtils.h  InfoStructure.h  LMMCPU.cpp  LMMCPU.h  MemoryUtils.cpp  MemoryUtils.h  NumericUtils.cpp  NumericUtils.h  Parameters.cpp  Parameters.h  PhenoBasis.h  PhenoBasis_impl.h  Timer.cpp  Timer.h  TypeDef.h  dataBasis.h  dataBasis_impl.h  main.cpp
